--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,3 +4,30 @@
 en:
   application:
     title_html: BobCat
+  holding_requests:
+    show:
+      scan: Your scan request has been processed. You will receive an email when the item is available.
+      default: Your request has been processed. You will be notified when this item is available to pick up at %{pickup_location}.
+    new:
+      available:
+        entire:
+          default: Request this item to be delivered to the pickup location of your choice.
+          nyuny: Request this item to be delivered to an NYU Library of your choice.
+          afc: Request this item for pick up at the Avery Fisher Center on the 2nd floor of the Bobst Library (NYC) or the NYU Abu Dhabi Library (UAE).
+          nyuad: Request this item. It will be held for you at the specified pickup location. Items are ready for pickup within 2 business days.
+        scan: 
+          default: Request that a portion of the item be scanned and delivered electronically.
+      offsite:
+        entire:
+          default: Request this item to be delivered to the pickup location of your choice.
+        scan: 
+          default: Request that a portion of the item be scanned and delivered electronically.
+      recall:
+        default: Recall this item from a fellow library user.
+        requested: You may also place a request to be added to the queue.
+      processing:
+        default: Request for this item to be held for you once processed.
+      on_order:
+        default: Request for this item to be held for you once processed.
+      ill:
+        default: Request this item from another library via Interlibrary Loan (ILL)
