Add the map text to the english locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
     holdings:
       request_text: Request
       ezborrow_text: E-ZBorrow
+      map_text: Map
       login_text: Login for Request Options
   holding_requests:
     show:
