Use locales to render the section titles for the Citation tools

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,10 @@
 en:
   application:
     title_html: BobCat
+  umlaut:
+    display_sections:
+      bib_tool:
+        title: Citation Management Tools
   resolve:
     holdings:
       request_text: Request
