Add the Copies in Library section title to the locales

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,8 @@ en:
     display_sections:
       bib_tool:
         title: Citation Management Tools
+      holding:
+        title: Copies in Library
   resolve:
     holdings:
       request_text: Request
