Change permalink popup ; Finishes #75622446

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,8 @@ en:
         title: Citation Management Tools
       holding:
         title: Copies in Library
+    permalink:
+      name: Create a stable link to this page
   resolve:
     holdings:
       request_text: Request
