Added an authorizer for AFC Schedulable and if authorized a purple button that says Schedule and links out to the AFC form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
     holdings:
       request_text: Request
       ezborrow_text: E-ZBorrow
+      afc_schedule_text: Schedule
       map_text: Map
       login_text: Login for Request Options
   holding_requests:
