Configure nyulibraries_errors for getit

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  nyulibraries_errors:
+    application_title: "GetIt"
   application:
     title_html: BobCat
   umlaut:
